# nyc-entity-resolver

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pages.yml  test.yml
examples/: sample_crosswalk.csv  sample_input.csv
src/nycresolver/: __init__.py  abbreviations.py  cli.py  export.py  fetcher.py  matcher.py  scorer.py
tests/: test_matcher.py  test_scorer.py
tests/fixtures/: canonical_sample.json
web/: index.html
